--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.1.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "mongoose": "^5.3.14",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
